syntax = "proto3";

package bookstore.v1;

option go_package = "github.com/icchy-san/bookstore-app/api/gen/go/bookstore/v1";

service BookstoreService {
    rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
}

message ListBooksRequest {
    string shelf = 1;
}

message ListBooksResponse {
    repeated Book books = 1;
}

message Book {
    string id = 1;
    string name = 2;
    string author = 3;
}
